Couple last minute interactive fixes

--- a/views/index.jade
+++ b/views/index.jade
@@ -96,7 +96,7 @@ block content
               input#locationCheck(type='checkbox' name='location' checked=true)
               span(class='checkmark')
               label(for='location') Locations of Interest
-              hr(style='background-color: white; width: 70%; margin: 8px 8px; pointer-events: none;')
+              hr(style='background-color: white; width: 70%; margin: 16px 8px 0 8px; pointer-events: none;')
             
             li#capital(class='specCheck' style='margin-top: 0;' onclick='toggleCheck(this.id, null)')
               input#capitalCheck(type='checkbox' name='capital' checked=true)
